// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App behaviour removes flip prompt on card click 1`] = `
<div
  aria-live="polite"
  class="App__shell"
>
  <transition-stub>
    <div
      class="App__start"
    >
      <card-stub />
      <button
        class="App__readMore --uppercase"
        id="readMore"
        tabindex="5"
      >
        <span
          class="App__bracket App__bracket--left"
          role="presentation"
        />
         Read More 
        <span
          class="App__bracket App__bracket--right"
          role="presentation"
        />
      </button>
    </div>
  </transition-stub>
</div>
`;

exports[`App behaviour switches to Main when click read more 1`] = `
<div
  aria-live="polite"
  class="App__shell"
>
  <transition-stub>
    <div
      class="App__start"
    >
      <card-stub />
      <button
        class="App__readMore --uppercase"
        id="readMore"
        tabindex="5"
      >
        <span
          class="App__bracket App__bracket--left"
          role="presentation"
        />
         Read More 
        <span
          class="App__bracket App__bracket--right"
          role="presentation"
        />
      </button>
    </div>
  </transition-stub>
</div>
`;

exports[`App rendering renders 1`] = `
<div
  aria-live="polite"
  class="App__shell"
>
  <transition-stub>
    <div
      class="App__start"
    >
      <card-stub />
      <button
        class="App__readMore --uppercase"
        id="readMore"
        tabindex="5"
      >
        <span
          class="App__bracket App__bracket--left"
          role="presentation"
        />
         Read More 
        <span
          class="App__bracket App__bracket--right"
          role="presentation"
        />
      </button>
    </div>
  </transition-stub>
</div>
`;

exports[`App rendering renders main screen 1`] = `
<div
  aria-live="polite"
  class="App__shell"
>
  <transition-stub>
    <main-screen-stub />
  </transition-stub>
</div>
`;
